	not appropriate
	* src/people48.png: new image
	* src/family48.png: new image
	* src/tools.png: new image
	* src/Makefile.am: added tools.png for installation

2003-08-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Add Go menu with navigation items. Still have to 
	work out the history menu being built at runtime. Add few shortcuts. 

2003-08-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FrenchRepublic.py: Insert encoding line because non-ascii
	charatcers are used. This behavior is deprecated and causes warnings 
	in python 2.3.
	* src/const.py.in: Likewise. 
	* src/FamilyView.py: Likewise. 
	* src/SelectChild.py: Likewise.
	* src/plugins/rel_ru.py: Likewise.
	* src/GrampsCfg.py: Fix toolbar prefs. 
	* src/intl.py: Import intl22.so for both 2.2 and 2.3 python versions.

2003-08-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: removed #! at top of file
	* src/gramps.py: removed #! at top of file
	* src/EditSource.py: removed #! at top of file

2003-08-14  Alexandre Duret-Lutz  <adl@gnu.org>
	* configure.in: Check for include directory of $PYTHON, not $PYTHON22.
	Set PYTHON_CPPFLAGS accordingly.  Do not set $PYTHON22 and
	$P22_INCLUDES, they are not used anymore.
	* src/Makefile.am (GVFSINC): Remove, unused.
	(intl22.so, grampslib.so): Adjust to use $P22_INCLUDES.

2003-08-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: implement a basic history mechanism
	* src/gramps.glade: add back and forward buttons

2003-08-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Pedegree.py: if only one child exists, don't display popup
	window when left arrow button is clicked.
	* src/FamilyView.py: if only one child exists, choose the child
	event if not selected if the child arrow button is clicked
	* src/AddMedia.py: set title for image select dialog
	* src/DbPrompter.py: set default path in database file entry box
	* src/gramps_main.py: set default path in database file entry box